# actix-example

./: .gitignore  Cargo.toml  README.md  release.toml
conf/: application.conf
conf/environments/dev/: application.conf
docker/: docker-compose.yaml  startup
docker/scylla/: schema.cql  scylla.yaml
scripts/: example.json  example.sh
src/: main.rs
src/api/: domain.rs  mod.rs  query.rs  store_model.rs
src/config/: config.rs
src/errors/: errors.rs
src/routes/: example.rs  health_check.rs  mod.rs  store.rs
src/server/: state.rs
src/service/: example_service.rs  mod.rs  service.rs  store_service.rs
src/store/: mock_store.rs  mod.rs  scylla_session.rs
src/store/model/: actix_store.rs  mod.rs  store.rs
src/util/: constants.rs  dns.rs  headers_constants.rs  hostname.rs  log.rs  mod.rs  vec_helper.rs
